2009-03-27  Dan Winship  <danw@gnome.org>

	* docs/reference/client-howto.xml: clarify that SoupSessionAsync
	is not thread-safe, and that setting a non-default GMainContext on
	a non-threadsafe object means you can only use that object from
	that GMainContext's thread.

2009-03-26  Milan Crha  <mcrha@redhat.com>

	Bug 574957 - soup-session-sync doesn't unlock mutex on proxy error

	* libsoup/soup-session-sync.c: (wait_for_connection):
	Unlock private lock also on proxy error.

2009-03-24  Dan Winship  <danw@gnome.org>

	Bug 571283 - Allow LF LF instead of CRLF CRLF as header/body separator

	* libsoup/soup-message-io.c (read_metadata): Change how this
	works; instead of taking a boundary string, just always pass "\n"
	as the boundary to soup_socket_read_until(), but call it multiple
	times if the caller wants us to read until a blank line.
	(io_read): update to deal with the fact that the headers might be
	terminated by LF LF rather than CRLF CRLF.

2009-03-23  Dan Winship  <danw@gnome.org>

	Bug 566530 - Handle (illegal) unencoded spaces in URIs

	* libsoup/soup-uri.c (uri_normalized_copy): optionally fix up
	parts with unencoded spaces in them.
	(soup_uri_new_with_base): tell uri_normalized_copy() to fix up
	spaces in the path and query components

	* tests/uri-parsing.c (abs_tests): test parsing and unparsing a
	URI with an unencoded space in it.

	* tests/redirect-test.c (tests, server_callback): add a test of
	redirecting to a URI with an unencoded space in it.

2009-03-15  Dan Winship  <danw@gnome.org>

	* configure.in: 2.26.0

	* NEWS: Update

2009-03-14  Xan Lopez  <xan@gnome.org>

        Add G_{BEGIN,END}_DECLS guards to public headers.

        * libsoup/soup-auth.h:
        * libsoup/soup-cookie-jar-sqlite.h:
        * libsoup/soup-cookie-jar-text.h:
        * libsoup/soup-proxy-resolver.h:

2009-03-11  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (soup_session_cancel_message): add more
	detail to the doc comment
