@@ -1,5 +1,10 @@
 2009-03-27  Dan Winship  <danw@gnome.org>
 
+	* libsoup/soup-cookie.c (soup_cookie_new): Fix docs to not claim
+	that the cookie domain can be %NULL. Add some g_return_if_fail()s.
+
+2009-03-27  Dan Winship  <danw@gnome.org>
+
 	* docs/reference/client-howto.xml: clarify that SoupSessionAsync
 	is not thread-safe, and that setting a non-default GMainContext on
 	a non-threadsafe object means you can only use that object from
